# Ai-android-pc

./: PUSH_LOG.md  aria_pc_server.py
.github/workflows/: build-android.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  aria_math.cpp  llama_jni.cpp
app/src/main/cpp/cmake/: FindOpenCL.cmake
app/src/main/cpp/stubs/: opencl_stub.c
app/src/main/kotlin/com/ariaagent/mobile/core/agent/: AgentLoop.kt  TaskDecomposer.kt
app/src/main/kotlin/com/ariaagent/mobile/core/ai/: LlamaEngine.kt  ModelCatalog.kt  ModelDispatcher.kt  ModelDownloadService.kt  ModelManager.kt  PromptBuilder.kt  VisionEngine.kt
app/src/main/kotlin/com/ariaagent/mobile/core/config/: AgentCombo.kt  ConfigStore.kt
app/src/main/kotlin/com/ariaagent/mobile/core/memory/: EmbeddingEngine.kt  ExperienceStore.kt
app/src/main/kotlin/com/ariaagent/mobile/core/pc/: PcBridgeClient.kt
app/src/main/kotlin/com/ariaagent/mobile/core/perception/: ScreenObserver.kt
app/src/main/kotlin/com/ariaagent/mobile/core/rl/: IrlModule.kt  LearningScheduler.kt  LlmRewardEnricher.kt  PolicyNetwork.kt
app/src/main/kotlin/com/ariaagent/mobile/core/setup/: ModelBootstrap.kt
app/src/main/kotlin/com/ariaagent/mobile/core/system/: ThermalGuard.kt
app/src/main/kotlin/com/ariaagent/mobile/system/accessibility/: AgentAccessibilityService.kt
app/src/main/kotlin/com/ariaagent/mobile/system/actions/: GestureEngine.kt
app/src/main/kotlin/com/ariaagent/mobile/system/overlay/: FloatingChatOverlay.kt
app/src/main/kotlin/com/ariaagent/mobile/system/screen/: ScreenCaptureService.kt
app/src/main/kotlin/com/ariaagent/mobile/ui/: ARIAComposeApp.kt
app/src/main/kotlin/com/ariaagent/mobile/ui/screens/: ActivityScreen.kt  ChatScreen.kt  ControlScreen.kt  DashboardScreen.kt  GoalsScreen.kt  KnowledgeWizardScreen.kt  LabelerScreen.kt  ModulesScreen.kt  OnboardingScreen.kt  SafetyScreen.kt  SettingsScreen.kt  TrainScreen.kt
app/src/main/kotlin/com/ariaagent/mobile/ui/viewmodel/: AgentViewModel.kt
